code refactor + responsivity

--- a/scss/components/header.scss
+++ b/scss/components/header.scss
@@ -1,16 +1,17 @@
-.collection__header{
+.collection{
     width: 100%;
-}
 
-.collection__list{
-    margin-top: 4rem;
-    list-style: none;
-    display: flex;
-    justify-content: center;
-    gap: 1rem;
-    font-size: 3rem;
-
-    &--first{
-        font-size: 5rem;
+    &__list{
+        margin-top: 4rem;
+        list-style: none;
+        display: flex;
+        justify-content: center;
+        gap: 1rem;
+        font-size: 3rem;
+    
+        &--first{
+            font-size: 5rem;
+        }
     }
 }
+
