--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,4 +1,6 @@
 @use "../scss/abstracts/reset";
 @use "../scss/components/header.scss";
 @use "../scss/components/main.scss";
+@use "../scss/base.scss";
 @use "../scss/abstracts/mediaqueries";
+@use "../scss/components/footer";
