--- a/css/style.css
+++ b/css/style.css
@@ -12,10 +12,9 @@ body {
   font-size: 2rem;
 }
 
-.collection__header {
+.collection {
   width: 100%;
 }
-
 .collection__list {
   margin-top: 4rem;
   list-style: none;
@@ -28,23 +27,16 @@ body {
   font-size: 5rem;
 }
 
+body {
+  height: 90vh;
+}
+
 .collection__main {
   display: flex;
   height: 100%;
   width: 100%;
   align-items: center;
 }
-
-body {
-  height: 90vh;
-}
-
-.episode__preview {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-}
-
 .collection__sectionleft {
   display: flex;
   justify-content: center;
@@ -52,7 +44,6 @@ body {
   width: 50%;
   height: 100%;
 }
-
 .collection__sectionright {
   display: flex;
   justify-content: center;
@@ -60,14 +51,12 @@ body {
   width: 50%;
   height: 100%;
 }
-
 .collection__article {
   display: flex;
   justify-content: center;
   align-items: center;
   width: 160rem;
 }
-
 .collection__cards {
   list-style: none;
   display: flex;
@@ -75,41 +64,34 @@ body {
   gap: 2rem;
   width: 45rem;
 }
-
 .collection__card {
   width: 20rem;
   height: 20rem;
   background: green;
   position: relative;
 }
-
 .collection__p--titel {
   position: absolute;
   bottom: 0.8rem;
   left: 1.6rem;
 }
-
 .collection__p--datum {
   position: absolute;
   top: 0.8rem;
   right: 1.6rem;
 }
-
 .collection__figure {
   position: relative;
   width: 90%;
   height: 20rem;
   background: gray;
 }
-
 .collection__episode {
   width: 100%;
 }
-
 .collection__paragraph {
   margin-top: 2rem;
 }
-
 .collection__audio {
   background: none;
   border: none;
@@ -118,7 +100,6 @@ body {
   width: 25rem;
   height: 4rem;
 }
-
 .collection__wrapper {
   display: flex;
   margin-top: 8rem;
@@ -127,13 +108,26 @@ body {
   height: 100%;
 }
 
-footer {
-  display: flex;
-  justify-content: center;
+.episode__preview {
   width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+a {
+  text-decoration: none;
+  color: black;
+}
+
+body {
+  font-family: "Ubuntu", sans-serif;
 }
 
 @media screen and (max-width: 62.5rem) {
+  .collection {
+    width: 100%;
+    height: 100%;
+  }
   .collection__header {
     height: 100%;
   }
@@ -147,7 +141,12 @@ footer {
   }
   .collection__sectionleft {
     width: 100%;
-    margin-top: 10rem;
+    height: 100%;
+  }
+  .collection__sectionright {
+    width: 100%;
+    height: auto;
+    padding-top: 100%;
   }
   .collection__cards {
     width: 100%;
@@ -155,7 +154,18 @@ footer {
   .collection__wrapper {
     flex-wrap: wrap;
     gap: 2rem;
+    flex-direction: column;
+    margin-bottom: 2rem;
   }
+  audio {
+    width: 25rem;
+  }
+}
+footer {
+  padding: 5rem;
+  display: flex;
+  justify-content: center;
+  width: 100%;
 }
 
 /*# sourceMappingURL=style.css.map */
