--- a/scss/abstracts/_mediaqueries.scss
+++ b/scss/abstracts/_mediaqueries.scss
@@ -1,34 +1,49 @@
 @media screen and (max-width: 62.5rem){
-    .collection__header{
+
+    
+    .collection{
+        width: 100%;
         height: 100%;
-    }
 
-    .collection__main{
-        flex-direction: column-reverse;
-    }
+        &__header{
+            height: 100%;
+        }
 
+        &__main{
+            flex-direction: column-reverse;
+        }
 
-    .collection__article{
-        display: flex;
+        &__article{
+            display: flex;
         justify-content: center;
         width: 50rem;
-    }
+        }
 
-    .collection__card{
-       
-    }
+        &__sectionleft{
+            width: 100%;
+            height: 100%;
+        }
 
-    .collection__sectionleft{
-        width: 100%;
-        margin-top: 10rem;
-    }
+        &__sectionright{
+            width: 100%;
+            height: auto;
+            padding-top: 100%;
+        }
 
-    .collection__cards{
-        width: 100%;
-    }
+        &__cards{
+            width: 100%;
+        }
 
-    .collection__wrapper{
-        flex-wrap: wrap;
-        gap: 2rem;
+        &__wrapper{
+            flex-wrap: wrap;
+            gap: 2rem;
+            flex-direction: column;
+            margin-bottom: 2rem;
+        }
+    }
+    
+
+    audio{
+        width: 25rem;
     }
 }
