--- a/scss/components/main.scss
+++ b/scss/components/main.scss
@@ -1,13 +1,102 @@
-.collection__main{
-    display: flex;
-    height: 100%;
-    width: 100%;
-    align-items: center;
-}
-
 body{
     height: 90vh;
 }
+
+.collection{
+
+    &__main{
+        display: flex;
+        height: 100%;
+        width: 100%;
+        align-items: center;
+    }
+
+    &__sectionleft{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 50%;
+        height: 100%;
+    }
+
+    &__sectionright{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 50%;
+        height: 100%;
+    }
+
+    &__article{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 160rem;
+    }
+
+    &__cards{
+        list-style: none;
+        display: flex;
+        flex-wrap: wrap;
+        gap: 2rem;
+        width: 45rem;
+    }
+
+    &__card{
+        width: 20rem;
+        height: 20rem;
+        background: green;
+        position: relative;
+    }
+
+    &__p--titel{
+        position: absolute;
+        bottom: 0.8rem;
+        left: 1.6rem;
+    }
+
+    &__p--datum{
+        position: absolute;
+        top: 0.8rem;
+        right: 1.6rem;
+    }
+
+    &__figure{
+        position: relative;
+        width: 90%;
+        height: 20rem;
+        background: gray;
+    }
+
+    &__episode{
+        width: 100%;
+    }
+
+    &__paragraph{
+        margin-top: 2rem;
+    }
+
+    &__audio{
+        background: none;
+        border: none;
+        background: black;
+        color: white;
+        width: 25rem;
+        height: 4rem;
+    }
+
+    &__wrapper{
+        display: flex;
+        margin-top: 8rem;
+        gap: 20rem;
+        width: 100%;
+        height: 100%;
+    }
+}
+
+
+
+
 
 .episode__preview{
     width: 100%;
@@ -15,95 +104,8 @@ body{
     object-fit: cover;
 }
 
-
-.collection__sectionleft{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 50%;
-    height: 100%;
+a{
+    text-decoration: none;
+    color: black;
 }
 
-.collection__sectionright{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 50%;
-    height: 100%;
-}
-
-.collection__article{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 160rem;
-    
-}
-
-.collection__cards{
-    list-style: none;
-    display: flex;
-    flex-wrap: wrap;
-    gap: 2rem;
-    width: 45rem;
- 
-}
-
-.collection__card{
-    width: 20rem;
-    height: 20rem;
-    background: green;
-    position: relative;
-}
-
-.collection__p--titel{
-    position: absolute;
-    bottom: 0.8rem;
-    left: 1.6rem;
-}
-
-.collection__p--datum{
-    position: absolute;
-    top: 0.8rem;
-    right: 1.6rem;
-}
-
-.collection__figure{
-    position: relative;
-    width: 90%;
-    height: 20rem;
-    background: gray;
-}
-
-.collection__episode{
-  width: 100%;
-}
-
-.collection__paragraph{
-    margin-top: 2rem;
-}
-
-.collection__audio{
-    background: none;
-    border: none;
-    background: black;
-    color: white;
-    width: 25rem;
-    height: 4rem;
-}
-
-
-.collection__wrapper{
-    display: flex;
-    margin-top: 8rem;
-    gap: 20rem;
-    width: 100%;
-    height: 100%;
-}
-
-footer{
-    display: flex;
-    justify-content: center;
-    width: 100%;
-   
-}
